--- a/MauiAppPrevisaoDoTempoSQLite/MainPage.xaml
+++ b/MauiAppPrevisaoDoTempoSQLite/MainPage.xaml
@@ -3,34 +3,51 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiAppPrevisaoDoTempoSQLite.MainPage">
 
-    <ScrollView>
-        <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
+    <StackLayout Padding="10">
+        <Entry x:Name="cidadeEntry" Placeholder="Digite a cidade" />
+        <Button Text="Pesquisar" Clicked="OnPesquisarClicked"/>
 
-            <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
+        <StackLayout Padding="10" Spacing="10">
+            <Label Text="Previsão Atual:" FontAttributes="Bold" FontSize="Large" />
+            <Label Text="Cidade:" FontAttributes="Bold"/>
+            <Label x:Name="cidadeLabel" />
 
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
+            <Label Text="Temperatura:" FontAttributes="Bold"/>
+            <Label x:Name="temperaturaLabel" />
 
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
-        </VerticalStackLayout>
-    </ScrollView>
+            <Label Text="Data:" FontAttributes="Bold"/>
+            <Label x:Name="dataLabel" />
+            <Label Text="Previsão:" FontAttributes="Bold"/>
+            <Label x:Name="previsaoLabel" />
+        </StackLayout>
+
+        <Label Text="Histórico de Consultas:" FontAttributes="Bold" FontSize="Large" Margin="0,20,0,0" />
+
+        <ListView ItemsSource="{Binding Consultas}">
+            <ListView.Header>
+                <Grid Padding="10" BackgroundColor="#2C3E50" RowDefinitions="Auto" ColumnDefinitions="*,*,*,*">
+
+                    <Label Text="Cidade" FontAttributes="Bold" TextColor="White" Grid.Column="0" />
+                    <Label Text="Temperatura" FontAttributes="Bold" TextColor="White" Grid.Column="1" />
+                    <Label Text="Data" FontAttributes="Bold" TextColor="White" Grid.Column="2" />
+                    <Label Text="Previsão" FontAttributes="Bold" TextColor="White" Grid.Column="3" />
+
+                </Grid>
+            </ListView.Header>
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <Grid Padding="10" ColumnDefinitions="*,*,*,*" RowDefinitions="Auto" BackgroundColor="#34495E">
+
+                            <Label Text="{Binding Cidade}" TextColor="White" Grid.Column="0" />
+                            <Label Text="{Binding Temperatura}" TextColor="White" Grid.Column="1" />
+                            <Label Text="{Binding DataPesquisa, StringFormat='{0:dd/MM/yyyy}'}" TextColor="White" Grid.Column="2" />
+                            <Label Text="{Binding Previsao}" TextColor="White" Grid.Column="3" />
+                        </Grid>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+    </StackLayout>
 
 </ContentPage>
